

2020-05-02

 - Minor performance improvment by avoiding calling __iadd__ in a few places.
 - Fixed bug due to the removal of __version__ in apiclient:
   https://github.com/googleapis/google-api-python-client/commit/1d8ec6874e1c6081893de7cd7cbc86d1f6580320
 - Changes all imports from 'apiclient' to 'googleapiclient', which is now the
   recommended way.


2020-04-11

 - Fixed #425: Tentative bug fix for crash on decref over null traceback. The
   Python API for this function may return some null values. Not taking any
   chances. This should fix this particular bug.


2020-03-28

  - Allow the "divert_expenses" plugin to override diversions on postings that
    aren't for expenses accounts. I needed this to account to a deposit to my
    kid's daycare, which is an asset account in his diverted ledger.


2020-03-22

  - Added docstrings on some import code (while installing a new importer; my
    stuff is sometimes poorly documented I'm afraid).


2020-02-23

  - Added new features to the CSV importer:
    * A new 'invert_sign' option to invert the sign of the amount.
    * A new field, 'CATEGORY', which goes unrendered.
    * Replace newlines from all narrations by semi-colons.
    These were driven by recent changes to the Amex CSV format.


2019-12-29

 - Added a CSV field for a unique reference number. If present, this is set as a
   link on the transaction.


2019-12-25

 - Applied patch from Daniele Nicolodi
   (https://bitbucket.org/blais/beancount/pull-requests/139/parser-work-around-python38-bug-causing-a)
   to work around typing constraints around signed size types introduced in
   Python 3.8. See also https://bugs.python.org/issue38913.

 - Fixed bug with running python3 as a subprocess during testing. Fixes an error
   that occurs with the tutorial file generation.


2019-11-29

 - Added 'encoding' option to CSV importer. Amex encodes as 'latin1', not
   'utf-8' and this turned out to be necessary.


2019-11-10
