@@ -127,16 +127,19 @@ def check(entries, options_map):
                                      expected_amount.currency),
                                  entry))
 
-            # Check the balance against the check entry.
-            real_account = realization.get(real_root, entry.account)
-            assert real_account is not None, "Missing {}".format(entry.account)
-
             # Sum up the current balances for this account and its
             # sub-accounts. We want to support checks for parent accounts
             # for the total sum of their subaccounts.
-            subtree_balance = inventory.Inventory()
-            for real_child in realization.iter_children(real_account, False):
-                subtree_balance.add_inventory(real_child.balance)
+            #
+            # FIXME: Improve the performance further by computing the balance
+            # for the desired currency only. This won't allow us to cache in
+            # this way but may be faster, if we're not asserting all the
+            # currencies. Furthermore, we could probably avoid recomputing the
+            # balance if a subtree of positions hasn't been invalidated by a new
+            # position added to the realization. Do this.
+            real_account = realization.get(real_root, entry.account)
+            assert real_account is not None, "Missing {}".format(entry.account)
+            subtree_balance = realization.compute_balance(real_account, leaf_only=False)
 
             # Get only the amount in the desired currency.
             balance_amount = subtree_balance.get_currency_units(expected_amount.currency)
