@@ -11,6 +11,14 @@ Note: This file contains a list changes in the 'default' branch.
    https://github.com/googleapis/google-api-python-client/commit/1d8ec6874e1c6081893de7cd7cbc86d1f6580320
  - Changes all imports from 'apiclient' to 'googleapiclient', which is now the
    recommended way.
+ - Fixed some warnings.
+ - Disabled expensive assertions in Inventory class and implemented a special
+   case for adding to an empty inventory to avoid expensive aggregation. This
+   can occur in aggregation loops and is unnecessarily expensive when adding a
+   single, very large inventory.
+ - Made balance check aggregation avoid an initial empty inventory object, and
+   changed the balance check code to call the realization utility function
+   compute_balance().
 
 
 2020-04-11
